# ShiphaEvolve

./: LICENSE  demo_ffa_evolution.py  demo_lsp_integration.py  pyproject.toml  requirements.txt  test_message.txt
config/: lsp_server_config.yaml
evaluator_agent/: Dockerfile  agent.py
examples/: ffa_optimization.yaml
ffa_demo/: __init__.py  baseline_functions.py  data_generator.py  evaluator.py  test_baseline.py
ide_clients/: base_client.py  generic_lsp_client.py  reference_client.py
lsp_server/: alphaevolve_lsp_bridge.py  server.py
shipha/: __init__.py
shipha/configs/: __init__.py  default.yaml
shipha/core/: __init__.py  config.py  evaluator.py  novelty.py  runner.py  sampler.py
shipha/database/: __init__.py  sqlite_db.py
shipha/edit/: __init__.py  apply_diff.py  apply_full.py
shipha/launch/: __init__.py  scheduler.py
shipha/llm/: __init__.py  bandit.py  client.py  embedding.py  models.py
shipha/prompts/: __init__.py  base.py  crossover.py  diff.py  meta.py
shipha/tests/: __init__.py  conftest.py  test_bandit.py  test_client.py  test_database.py
shipha/tools/: __init__.py  stub_generator.py
task_manager/: agent.py
tests/: test_clients.py  test_lsp_bridge.py
